--- a/CSS/style.css
+++ b/CSS/style.css
@@ -161,6 +161,15 @@ a img:hover {
 }
 
 /* CONTACT */
+
+#email h4 {
+    border-bottom: 2px dotted #ffebee;
+}
+
+#email h4:hover {
+    border-bottom: 2px dotted #1975d2;
+}
+
 input, textarea {
     width: 90%;
     padding: .3em;
